# example-windows-rs

./: Cargo.toml  README.md
examples/: a-ocr.rs
src/: lib.rs
