[package]
name = "example-windows-rs"
version = "0.0.0-develop"
authors = ["fg51 <zknsftk1msrk@gmail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
#clap = { version = "4", features = ["derive"] }
#thiserror = "1"
tokio =  { version = "1.34", features = ["full"]}
#tracing = "0.1"
#tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.windows]
version = "0.52.0"
features = [
  "Media_Ocr",
  "Storage_Streams", # Storage
  "Foundation",  # GetFileFromPathAsync
  "Graphics_Imaging",  # Graphics
]
